--- a/kalendárium/index.html
+++ b/kalendárium/index.html
@@ -85,37 +85,9 @@ cursor: pointer;
 	 
 
 <!-- Trigger/Open The Modal -->
-	 <button type="button" class="btn btn-danger" id="" disabled="">1</button>
-<button type="button" class="btn btn-danger" id="" disabled="">2</button>
-	 <button type="button" class="btn btn-danger" id="" disabled="">3</button>
-<button type="button" class="btn btn-danger" id="" disabled="">4</button>
-	  <button type="button" class="btn btn-danger" id="" disabled="">5</button>
-<button type="button" class="btn btn-danger" id="" disabled="">6</button>
-	 <button type="button" class="btn btn-danger" id="" disabled="">7</button>
-<button type="button" class="btn btn-danger" id="" disabled="">8</button>
-	   <button type="button" class="btn btn-danger" id="" disabled="">9</button>
-<button type="button" class="btn btn-danger" id="" disabled="">10</button>
-	 <button type="button" class="btn btn-danger" id="" disabled="">11</button>
-<button type="button" class="btn btn-danger" id="" disabled="">12</button>
-	  <button type="button" class="btn btn-danger" id="" disabled="">13</button>
-<button type="button" class="btn btn-danger" id="" disabled="">14</button>
-	 <button type="button" class="btn btn-danger" id="" disabled="">15</button>
-<button type="button" class="btn btn-danger" id="" disabled="">16</button>
-<button type="button" class="btn btn-danger" id="" disabled="">17</button>
-<button type="button" class="btn btn-danger" id="" disabled="">18</button>
-	 <button type="button" class="btn btn-danger" id="" disabled="">19</button>
-<button type="button" class="btn btn-danger" id="" disabled>20</button>
-	 <button type="button" class="btn btn-danger" id="" disabled>21</button>
-<button type="button" class="btn btn-danger" id="" disabled>22</button>	 
-<button type="button" class="btn btn-danger" id="" disabled>23</button>
-<button type="button" class="btn btn-danger" id="" disabled>24 :D</button>
-	 <button type="button" class="btn btn-warning" id="" disabled>25 (kimaradt :c)</button>
-<button type="button" class="btn btn-danger" id="" disabled>26</button>
-	 <button type="button" class="btn btn-danger" id="" disabled>27</button>
-<button type="button" class="btn btn-warning" id="" disabled>28 (kimaradt)</button>
-<button type="button" class="btn btn-success" id="napi" >29</button>
-<button type="button" class="btn btn-dark" id="" disabled>30</button>
-	 <button type="button" class="btn btn-dark" id="" disabled>31</button>
+
+<button type="button" class="btn btn-success" id="napi" >Új év 2022 :D YEEEY XD</button>
+
 <!-- LikeBtn.com BEGIN -->
 <span class="likebtn-wrapper" data-lang="hu" data-ef_voting="shake" data-identifier="item_1" data-show_dislike_label="true" data-popup_width="0" data-loader_show="true"></span>
 <script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
@@ -126,10 +98,12 @@ cursor: pointer;
   <div class="modal-content">
     <div class="modal-header">
       <span class="close">×</span>
-      <h2>Fusion Craft Nap - 29</h2>
+      <h2>Fusion Craft Kalendárium - 2022</h2>
     </div>
     <div class="modal-body">
-      <div class="popup" onclick="myFunction()">Kód: Fusion-29anxkPDs
+	    <h3>!FIGYELEM!<h3>
+		    <h4>A kód csak EGYSZER beváltható. Addig lehet beváltani míg a szerver megnem nyílik.<h4>
+      <div class="popup" onclick="myFunction()">Kód: Fusion-2022ÚjÉviAjándékXD
   <span class="popuptext" id="myPopup">Hi! Nem tudod, hogy kell beváltani? Nyiss ticketet!</span>
     </div>
     </div>
