--- a/kalendárium/index.html
+++ b/kalendárium/index.html
@@ -111,7 +111,7 @@ cursor: pointer;
        <style>
 .alias {cursor: alias;}
 </style>
-  <h3><a href="/" class="alias">Fusion Craft</a></h3>
+  <h3><a href="/" class="idk" target="_blank">Fusion Craft</a></h3>
 <style>
 a:link {
   color: black;
