--- a/keresés/index.html
+++ b/keresés/index.html
@@ -82,7 +82,7 @@ cursor: pointer;
 </style>
 	 <h1>Fusion Craft</h1><h1>
 </h1><h2>Kereső</h2>
-<h3>Ez a kereső a <a href="https://google.com" Google</a>-t használja. Arra irányít. <b>Nem<b> a weboldalon keres.</h3>
+<h3>Ez a kereső a Google-t használja. Arra irányít. <b>Nem<b> a weboldalon keres.</h3>
    <form action="https://www.google.com/search?q=">
       <input type="text" placeholder="Keres valamire!" name="search">
       <button type="submit" onclick="Szar()" ><i class="fa fa-search"></i></button>
@@ -90,7 +90,7 @@ cursor: pointer;
 <script>
 function Szar() {
   let text;
-  if (confirm("Ez, ez egy példa.") == true) {
+  if (confirm("Új oldalra tartasz. Vigyázz!") == true) {
     text = "Az OK gombot megnyomtad (ez nem tudom miért jó neked xd).";
   } else {
     text = "Nem fogadtad el. (De miért nem? :'D)";
