--- a/feliratkozás/index.html
+++ b/feliratkozás/index.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
+<link rel="stylesheet" href="/feliratkozás/index.css/" >
 
 <div class="wrapper">
   <form action="#" class="card-content">
