--- a/feliratkozás/index.html
+++ b/feliratkozás/index.html
@@ -1,19 +1,20 @@
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
-<link rel="stylesheet" href="/feliratkozás/index.css/" >
+<link rel="stylesheet" href="https://fusioncrafthu.github.io/feliratkozás/index.css/" >
+<style href="https://fusioncrafthu.github.io/feliratkozás/index.css/"> </style>
 
-<div class="wrapper">
-  <form action="#" class="card-content">
-    <div class="container">
-      <div class="image">
-        <i class="fas fa-envelope"></i>
-      </div>
-      <h1>Subscribe</h1>
-      <p>Subscribe to our newsletter and stay updated.</p>
-    </div>
-    <div class="form-input">
-      <label for="email"></label>
-      <input type="email" placeholder="Your Email">
-      <button class="subscribe-btn">Subscribe</button>
-    </div>
-  </form>
-</div>
+
+
+<link rel="stylesheet" href="https://fusioncrafthu.github.io/feliratkozás/index.css/" >
+<style href="https://fusioncrafthu.github.io/feliratkozás/index.css/"> </style>
+
+
+<form
+  action="https://formspree.io/f/xrgjpyyp"
+  method="POST"
+>
+<form action="https://formspree.io/tutiuzleti@gmail.com">
+    <input type="text" name="name" placeholder="Neved">
+    <input type="email" name="_replyto" placeholder="Emailed">
+    <input type="submit" value="Send">
+</form>
+
+
