--- a/feliratkozás/index.html
+++ b/feliratkozás/index.html
@@ -14,10 +14,8 @@
 <form action="https://formspree.io/tutiuzleti@gmail.com">
     <input type="text" name="name" placeholder="Neved">
     <input type="email" name="_replyto" placeholder="Emailed">
-  <input id="accept" name="accept" type="checkbox" value="y"/>Elfogadok mindent xd <br>  
-<input     value="Submit" />
-  
-    <input id="submitbtn" class="send" type="submit" value="Send" type="submit" disabled="disabled" name="Submit">
+  <input id="accept" name="accept" type="checkbox" value="y"/>Elfogadok mindent xd <br>    
+    <input id="submitbtn" class="send" type="submit" value="Send" type="submit" disabled="disabled" >
 <script>
 function Funch {
 $('#accept').click(function() {
@@ -26,7 +24,7 @@ $('#accept').click(function() {
     } else {
     	$('#submitbtn').attr('disabled', 'disabled');
     }
-});
+}});
 </script>
 </form>
 
