--- a/feliratkozás/index.html
+++ b/feliratkozás/index.html
@@ -14,27 +14,8 @@
 <form action="https://formspree.io/tutiuzleti@gmail.com">
     <input type="text" name="name" placeholder="Neved">
     <input type="email" name="_replyto" placeholder="Emailed">
-  <input id="accept" name="accept" type="checkbox" value="y"/>Elfogadok mindent xd <br>    
-    <input id="submitbtn" class="send" type="submit" value="Send" type="submit" disabled="disabled" >
-<script>
-function accept {
-$('#accept').click(function() {
-	if ($('#submitbtn').is(':disabled')) {
-    	$('#submitbtn').removeAttr('disabled');
-    } else {
-    	$('#submitbtn').attr('disabled', 'disabled');
-    }
-}});
-</script>
-	<script>
-$('#accept').click(function() {
-	if ($('#submitbtn').is(':disabled')) {
-    	$('#submitbtn').removeAttr('disabled');
-    } else {
-    	$('#submitbtn').attr('disabled', 'disabled');
-    }
-});
-</script>
+    <input type="submit" value="Send">
+
 </form>
 
 
