--- a/feliratkozás/index.html
+++ b/feliratkozás/index.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="https://fusioncrafthu.github.io/feliratkozás/index.css/">
     <title>Feliratkozás - Fusion Craft</title>
 	<meta data-n-head="1" data-hid="og:type" name="og:type" content="website">
 	<meta data-n-head="1" data-hid="og:site_name" name="og:site_name" content="Fusion Craft">
@@ -140,7 +144,7 @@ html {
   border-radius: 20px;
   padding: 10px; 
   width: 700px;
-  height: 250px;  
+  height: 300px;  
 }
 
 .szoveg {
@@ -256,3 +260,7 @@ cursor: pointer;
 
 </form>
  </div>
+
+</html>
+
+
