--- a/kezdolap/index.html
+++ b/kezdolap/index.html
@@ -348,13 +348,250 @@ function closeidk() {
 			    
 
  <h1>Csapattagok:</h1><h1>
-<a class="btn btn-primary" role="button" href="/csapattagok/"><span>Katt ide!</span></a>
+<a class="btn btn-primary" role="button" href="/csapattagok/"><span>Katt ide!</span></a><style>
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+.newscuc {
+}
+::selection{
+  color: #000;
+  background: #b111;
+}
+.wrapper{
+  position: absolute;
+  max-width: 480px;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  padding: 40px 30px;
+  background: #fff;
+  border-radius: 15px;
+  opacity: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%) scale(1.2);
+  box-shadow: 10px 10px 15px rgba(0,0,0,0.06);
+  transition: opacity 0.2s 0s ease-in-out,
+              transform 0.2s 0s ease-in-out;
+}
+.wrapper.show{
+  opacity: 1;
+  pointer-events: auto;
+  transform:translate(-50%, -50%) scale(1);
+}
+.wrapper .content,
+.content .warn-icon,
+.warn-icon .icon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wrapper .content{
+  flex-direction: column;
+}
+.content .warn-icon{
+  height: 115px;
+  width: 115px;
+  border-radius: 50%;
+  background: linear-gradient(#9b27ca 0%, #9927cf 0%, #d33639 100%, #f92121 100%);
+}
+.warn-icon .icon{
+  height: 100px;
+  width: 100px;
+  background: #fff;
+  border-radius: inherit;
+}
+.warn-icon .icon i{
+  background: linear-gradient(#9b27ca 0%, #9927cf 0%, #d33639 100%, #f92121 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 50px;
+}
+.content h2{
+  margin-top: 35px;
+  font-size: 32px;
+}
+.content p{
+  font-size: 19px;
+  text-align: center;
+  margin-top: 20px;
+}
+.btnx{
+  height: 57px;
+  width: 223px;
+  margin-top: 30px;
+  border-radius: 50px;
+  position: relative;
+  overflow: hidden;
+}
+.btnx .bg-layer{
+  height: 100%;
+  width: 300%;
+  position: absolute;
+  left: -100%;
+  background: -webkit-linear-gradient(135deg, #9b27ca, #d33639, #9b27ca, #d33639);
+  transition: all 0.4s ease;
+}
+.btn:hover .bg-layer{
+  left: 0;
+}
+.content button{
+  position: relative;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  background: none;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  color: #fff;
+  cursor: pointer; }
+  
+  @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap');
+
+
+
+html {
+  font-size: 20px;
+  font-family: 'Roboto';
+}
+
+.newscus {
+  background: linear-gradient(90deg, #ff9966, #ff5e62);
+  border-radius: 20px;
+  padding: 10px; 
+  width: 700px;
+  height: 300px;  
+}
+
+.szoveg {
+width: 300px;
+}
+
+.email {
+width: 300px;
+}
+
+.kuldes {
+width: 250px;
+}
+
+.subszoveg {
+ text-decoration: underline;
+ color: #000;
+ cursor: help;
+ }
+ 
+.subbiztonsag {
+ text-decoration: underline;
+ color: #000;
+ cursor: url(https://cdn.discordapp.com/attachments/939237536704897104/939460758528487424/unknown.png) 2 2, auto;
+ }
+ 
+ .suble {
+ text-decoration: underline;
+ color: #000;
+ cursor: url(https://cdn.discordapp.com/attachments/939237536704897104/939465114569048104/emojitowebxd2.png) 2 2, auto;
+ }
+ 
+
+ 
+.wrapper {
+  height: 100vh;
+  position: realtive;
+}
+
+.fas.fa-envelope {
+  color: #fff;
+  font-size: 2rem;
+  background: #333;
+  padding: 1rem;
+  border-radius: 100%;
+  margin: 0 0 1rem 0;
+}
+
+.card-content {
+  max-width: 30rem;
+  background-color: #fff;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  border-radius: 1rem;
+  padding: 4rem .5rem;
+  box-shadow: 1px 1px 2rem rgba(0,0,0,.3);
+  text-align: center;
+}
+
+.card-content h1 {
+  text-transform: uppercase;
+  margin: 0 0 1rem 0;
+}
+
+.card-content p {
+  font-size: .8rem;
+  margin: 0 0 2rem 0;
+}
+
+input {
+  padding: .8rem 1rem;
+  width: 40%;
+  border-radius: 5rem;
+  outline: none;
+  border: .1rem solid #d1d1d1;
+  font-size: .7rem;
+}
+
+::placeholder {
+  color: #d1d1d1;
+}
+
+.subscribe-btn {
+  padding: .8rem 2rem;
+  border-radius: 5rem;
+  background: linear-gradient(90deg, #ff9966, #ff5e62);
+  color: #fff;
+  font-size: .7rem;
+  border-radius: 100px;
+  outline: none;
+cursor: pointer;
+}
+</style>
+
+
+
+
+<div class="newscus">
+
+
+<link rel="stylesheet" href="https://fusioncrafthu.github.io/feliratkozás/index.css/">
+<form
+  action="https://formspree.io/f/xrgjpyyp"
+  method="POST"
+>
+<form action="https://formspree.io/tutiuzleti@gmail.com">
+
+<h5>Email feliratkozás<h5>
+    <input class="szoveg" type="text" name="name" placeholder="Neved/Discord neved" >
+    <input class="email" type="email" name="_replyto" placeholder="Emailed"><h1></h1>
+  <a class="subszoveg" href="/feliratkozás/miertkerjukazadataid/">Miért kérjük a ezeket az adatokat?</a> <h1></h1><a class="subbiztonsag" href="/feliratkozás/biztonság/">Adataid biztonsága</a><h1></h1> <a class="suble">Leiratkozás: Discordon írsz</a><h1></h1> <input class="subscribe-btn" type="submit" value="Küldés"></input>
+
+</form>
+ </div>
+ <h1>⠀<h1> <h1><h1> 
+ <h1>⠀<h1> 
       <h1>Szólj hozzá!<h1>
 <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Commentek</a> töltenek</div> 
  <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24ekrWIIJiXBJGn7LVnTiGU1"+"&opts=16798&num=10&ts=1640018663162");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 	
 	
+
 </footer>
   <p>Fusion Craft 2021-2022</p>
   <p>Weboldal made by TutiCraft<p>
