--- a/kezdolap/index.html
+++ b/kezdolap/index.html
@@ -348,7 +348,10 @@ function closeidk() {
 			    
 
  <h1>Csapattagok:</h1><h1>
-<a class="btn btn-primary" role="button" href="/csapattagok/"><span>Katt ide!</span></a><style>
+<a class="btn btn-primary" role="button" href="/csapattagok/"><span>Katt ide!</span></a>
+<h1>⠀<h1>
+
+<style>
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
 *{
   margin: 0;
