--- a/feliratkozás/index.html
+++ b/feliratkozás/index.html
@@ -99,7 +99,7 @@
   text-align: center;
   margin-top: 20px;
 }
-.btn{
+.btnx{
   height: 57px;
   width: 223px;
   margin-top: 30px;
@@ -107,7 +107,7 @@
   position: relative;
   overflow: hidden;
 }
-.btn .bg-layer{
+.btnx .bg-layer{
   height: 100%;
   width: 300%;
   position: absolute;
@@ -161,7 +161,8 @@ width: 250px;
 
 .subszoveg {
  text-decoration: underline;
- color: #000
+ color: #000;
+ cursor: help;
  }
  
 .subbiztonsag {
@@ -256,11 +257,6 @@ cursor: pointer;
 <h5>Email feliratkozás<h5>
     <input class="szoveg" type="text" name="name" placeholder="Neved/Discord neved" >
     <input class="email" type="email" name="_replyto" placeholder="Emailed"><h1></h1>
-  <a class="subszoveg" href="/feliratkozás/miertkerjukazadataid/">Miért kérjük a ezeket az adatokat?</a> <h1></h1><a class="subbiztonsag" href="/feliratkozás/biztonság/">Adataid biztonsága</a><h1></h1> <a class="suble">Leiratkozás: Discordon írsz</a><h1></h1> <input class="subscribe-btn" type="submit" value="Küldés">
+  <a class="subszoveg" href="/feliratkozás/miertkerjukazadataid/">Miért kérjük a ezeket az adatokat?</a> <h1></h1><a class="subbiztonsag" href="/feliratkozás/biztonság/">Adataid biztonsága</a><h1></h1> <a class="suble">Leiratkozás: Discordon írsz</a><h1></h1> <input class="subscribe-btn" type="submit" value="Küldés"></input>
 
 </form>
- </div>
-
-</html>
-
-
