--- a/feliratkozás/index.html
+++ b/feliratkozás/index.html
@@ -260,3 +260,4 @@ cursor: pointer;
   <a class="subszoveg" href="/feliratkozás/miertkerjukazadataid/">Miért kérjük a ezeket az adatokat?</a> <h1></h1><a class="subbiztonsag" href="/feliratkozás/biztonság/">Adataid biztonsága</a><h1></h1> <a class="suble">Leiratkozás: Discordon írsz</a><h1></h1> <input class="subscribe-btn" type="submit" value="Küldés"></input>
 
 </form>
+</div>
