--- a/feliratkozás/miertkerjukazadataid/index.html
+++ b/feliratkozás/miertkerjukazadataid/index.html
@@ -165,11 +165,13 @@ width: 250px;
  cursor: help;
  }
  
-.h1 {
+	h1 {
  text-decoration: underline;
- color: #000;
+ background: linear-gradient(90deg, #ff9966, #ff5e62);
  cursor: progress;
  }
+	
+	
 .subbiztonsag {
  text-decoration: underline;
  color: #000;
