--- a/teszti/index.html
+++ b/teszti/index.html
@@ -24,5 +24,26 @@
 
     </div>
     <script src="/teszti/script.js"></script>
+        <?php>
+         let domain = "localhost/url/";
+                shortenURL.value = domain + data;
+                copyIcon.onclick = ()=>{
+                    shortenURL.select();
+                    document.execCommand("copy");
+                } 
+?>
+        
+         <div class="data">
+                <li>
+                  <a href="<?php echo $domain.$row['short_url'] ?>" target="_blank">
+                  <?php
+                    if($domain.strlen($row['short_url']) > 50){
+                      echo $domain.substr($row['short_url'], 0, 50) . '...';
+                    }else{
+                      echo $domain.$row['short_url'];
+                    }
+                  ?>
+                  </a>
+                </li>
 </body>
 </html>
