--- a/teszti/index.html
+++ b/teszti/index.html
@@ -10,6 +10,7 @@
             <i class="url-icon uil uil-link"></i>
             <input type="text"placeholder="Enter the long url" required>
             <button>Shorten the URL</button>
+            <method="POST">
         </form>
         <div class="count">
             <span>Total Links: <span>10</span> & Total Clicks</span>
