--- a/filmcuccgenerátor/index.html
+++ b/filmcuccgenerátor/index.html
@@ -1,3 +1,30 @@
+
+      <title>Film Cucc Generátor 2000 GWX XLL 2 Model A1 B9 - Fusion Craft</title>
+	<meta data-n-head="1" data-hid="og:type" name="og:type" content="website">
+	<meta data-n-head="1" data-hid="og:site_name" name="og:site_name" content="Fusion Craft">
+	    <meta charset="UTF-8">
+         <meta name="description" content="Fusion Craft hivatalos weboldal.
+	Film Cucc Generátor 2000 GWX XLL 2 Model A1 B9  Film Cucc Generátor 2000 GWX XLL 2 Model A1 B9
+	Film Cucc Generátor 2000 GWX XLL 2 Model A1 B9  Film Cucc Generátor 2000 GWX XLL 2 Model A1 B9
+	Film Cucc Generátor 2000 GWX XLL 2 Model A1 B9  Film Cucc Generátor 2000 GWX XLL 2 Model A1 B9
+        Film Cucc Generátor 2000 GWX XLL 2 Model A1 B9  Film Cucc Generátor 2000 GWX XLL 2 Model A1 B9
+					   ">
+         <meta name="theme-color" content="#00f7ff">
+    <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/838444211463651378/908807857451991070/fusioncraft.png" type="image/x-icon">
+<meta property="og:image" content="https://fusioncrafthu.github.io/gifek/fc.gif">
+<meta property="og:url" content="https://fusioncrafthu.github.io/">					
+											   
+         <meta name="author" content="TutiCraft">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <link rel="stylesheet" href="style.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 <style>html, body {
   overflow-x: hidden;
   overflow-y: hidden; 
@@ -202,9 +229,9 @@ function checkTime(i) {
 
 
 //vezeteknev array
-var adjective = ["Löcö","Kovács","Erős","Gyenge","Veszélyes","Péter","László","Trombitás","Burger","János","Kalaúz","Macskás","Kamary Kay","Orbát","Ohmát","Kormos","Kopélia","Myar","Hoyaaa","Fészkes","Vészes","French","Grunt","Banán","Morgás","Ozmok Kay","Doctor","Hallasz","Athéné","Rufus","Spanish","Magyarish","Bohóc"]
+var adjective = ["Löcö","Kovács","Erős","Gyenge","Veszélyes","Péter","László","Trombitás","Burger","János","Kalaúz","Macskás","Kamary Kay","Orbát","Ohmát","Kormos","Kopélia","Myar","Hoyaaa","Fészkes","Vészes","French","Grunt","Banán","Morgás","Ozmok Kay","HidrogénHélium2He2Lítium3Li	Berillium4Be		Bór5B	Szén6C	Nitrogén7N	Oxigén8O	Fluor9F	Neon10Ne3	Nátrium11Na	Magnézium12Mg		Alumínium13Al	Szilícium14Si	Foszfor15P	Kén16S	Klór17Cl	Argon18Ar4	Kálium19K	Kalcium20Ca	Szkandium21ScTitán22Ti	Vanádium23V	Króm24Cr	Mangán25Mn	Vas26Fe	Kobalt27CoNikkel28Ni	Réz29Cu	Cink30Zn	Gallium31Ga	Germánium32","Doctor","Hallasz","Rufus","Spanish","Magyarish","Bohóc","xd","Ber"]
 
-var object = ["Péter","László","Ádám","Viktória","Izabell","Márk","György","Dániel","Antal","Levente","Balázs","Ben","Benjámin","Bokarétes","Rétes","Tégla"]
+var object = ["Péter","László","Ádám","Viktória","Izabell","Márk","György","Dániel","Antal","Levente","Balázs","Ben","Benjámin","Bokarétes","Rétes","Tégla","Acél","Árnéd","Adolf","Ahben","György","Arken","Spenisss","Riadó","Error-#2#>2","Jézus","Isten","Politikus","Jézus Isten Kövér Fakaromkaroskamakoronjasztus","Morgás","Vörös Szájú J.A. Morgás","Kumukum","Paragatum","Görg","Margó","YEEE","Adrián","Szoktál politizálni? XD Szavazz a: Fklmpqrstqwertyxdnyilatkozásifelvételadómorgásvörörhal","Szájmön","Szájamon","Majom","System 32","SIM Kártya Törlése","Adó"]
 var list;
 
 
