--- a/filmcuccgenerátor/index.html
+++ b/filmcuccgenerátor/index.html
@@ -465,8 +465,7 @@ function checkTime(i) {
 
 
 //vezeteknev array
-var adjective = ["Löcö","Kovács","Erős","Gyenge","Veszélyes","Péter","László","Trombitás","Burger","János","Kalaúz","Macskás","Kamary Kay","Orbát","Ohmát","Kormos","Kopélia","Myar","Hoyaaa","Fészkes","Vészes","French","Grunt","Banán","Morgás","Ozmok Kay","HidrogénHélium2He2Lítium3Li	Berillium4Be		Bór5B	Szén6C	Nitrogén7N	Oxigén8O	Fluor9F	Neon10Ne3	Nátrium11Na	Magnézium12Mg		Alumínium13Al	Szilícium14Si	Foszfor15P	Kén16S	Klór17Cl	Argon18Ar4	Kálium19K	Kalcium20Ca	Szkandium21ScTitán22Ti	Vanádium23V	Króm24Cr	Mangán25Mn	Vas26Fe	Kobalt27CoNikkel28Ni	Réz29Cu	Cink30Zn	Gallium31Ga	Germánium32","Doctor","Hallasz","Rufus","Spanish","Magyarish","Bohóc","xd","Ber"]
-
+var adjective = ["Löcö","Kovács","Erős","Gyenge","Veszélyes","Péter","László","Trombitás","Burger","János","Kalaúz","Macskás","Kamary Kay","Orbát","Ohmát","Kormos","Kopélia","Myar","Hoyaaa","Fészkes","Vészes","French","Grunt","Banán","Morgás","Ozmok Kay","Undefined/Meghatározatlan","Doctor","Hallasz","Rufus","Spanish","Magyarish","Bohóc","xd","Ber"]
 var object = ["Péter","László","Ádám","Viktória","Izabell","Márk","György","Dániel","Antal","Levente","Balázs","Ben","Benjámin","Bokarétes","Rétes","Tégla","Acél","Árnéd","Adolf","Ahben","György","Arken","Spenisss","Riadó","Error-#2#>2","Jézus","Isten","Politikus","Jézus Isten Kövér Fakaromkaroskamakoronjasztus","Morgás","Vörös Szájú J.A. Morgás","Kumukum","Paragatum","Görg","Margó","YEEE","Adrián","Szoktál politizálni? XD Szavazz a: Fklmpqrstqwertyxdnyilatkozásifelvételadómorgásvörörhal","Szájmön","Szájamon","Majom","System 32","SIM Kártya Törlése","Adó"]
 var list;
 
