--- a/kalendárium/index.html
+++ b/kalendárium/index.html
@@ -88,12 +88,7 @@ cursor: pointer;
 
 <button type="button" class="btn btn-success" id="napi" >Új év 2022 :D YEEEY XD</button>
 
-<!-- LikeBtn.com BEGIN -->
-<span class="likebtn-wrapper" data-lang="hu" data-ef_voting="shake" data-identifier="item_1" data-show_dislike_label="true" data-popup_width="0" data-loader_show="true"></span>
-<script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
-<!-- LikeBtn.com END -->
-<div id="myModal" class="modal">
-
+ <h3>Customer Reviews</h3><!-- Start BawkBox Code--><script data-sil-id="627d4de4592bf9001e3cd8cc">var loadWidget = function() { var d = document, w = window, l = window.location,p = l.protocol == "file:" ? "http://" : "//"; if (!w.WS) w.WS = {}; c = w.WS; var m=function(t, o){ var e = d.getElementsByTagName("script"); e=e[e.length-1]; var n = d.createElement(t); if (t=="script") {n.async=true;} for (k in o) n[k] = o[k]; e.parentNode.insertBefore(n, e)}; m("script", { src: p + "bawkbox.com/widget/star-rating/627d4de4592bf9001e3cd8cc?page=" +encodeURIComponent(l+''), type: 'text/javascript' }); c.load_net = m; }; if(window.Squarespace){ document.addEventListener('DOMContentLoaded', loadWidget); setTimeOut(function(){ document.addEventListener('DOMContentLoaded', loadWidget); }, 3000) } else { loadWidget() } </script><script type="application/ld+json" src="/widget/star-rating/627d4de4592bf9001e3cd8cc/microdata"></script><div class="sil-widget-star-rating sil-widget" id="sil-widget-627d4de4592bf9001e3cd8cc"><a href="//bawkbox.com/install/star-rating">Customer Reviews</a></div><!-- End BawkBox Code--> 
   <!-- Modal content -->
   <div class="modal-content">
     <div class="modal-header">
