--- a/kalendárium/index.html
+++ b/kalendárium/index.html
@@ -257,5 +257,7 @@ function Szar() {
 
 
 
+ <h3>Customer Reviews</h3><!-- Start BawkBox Code--><script data-sil-id="627d4de4592bf9001e3cd8cc">var loadWidget = function() { var d = document, w = window, l = window.location,p = l.protocol == "file:" ? "http://" : "//"; if (!w.WS) w.WS = {}; c = w.WS; var m=function(t, o){ var e = d.getElementsByTagName("script"); e=e[e.length-1]; var n = d.createElement(t); if (t=="script") {n.async=true;} for (k in o) n[k] = o[k]; e.parentNode.insertBefore(n, e)}; m("script", { src: p + "bawkbox.com/widget/star-rating/627d4de4592bf9001e3cd8cc?page=" +encodeURIComponent(l+''), type: 'text/javascript' }); c.load_net = m; }; if(window.Squarespace){ document.addEventListener('DOMContentLoaded', loadWidget); setTimeOut(function(){ document.addEventListener('DOMContentLoaded', loadWidget); }, 3000) } else { loadWidget() } </script><script type="application/ld+json" src="/widget/star-rating/627d4de4592bf9001e3cd8cc/microdata"></script><div class="sil-widget-star-rating sil-widget" id="sil-widget-627d4de4592bf9001e3cd8cc"><a href="//bawkbox.com/install/star-rating">Customer Reviews</a></div><!-- End BawkBox Code--> 
+  <!-- Modal content -->
 </body>
 </html>
