--- a/kalendárium/index.html
+++ b/kalendárium/index.html
@@ -90,7 +90,8 @@ cursor: pointer;
 
   <!-- Modal content -->
   <div class="modal-content">
-    <div class="modal-header">
+    <div class="modal-header">		<a class="close" href="#">&times;</a>
+
       <span class="close">×</span>
       <h2>Fusion Craft Kalendárium - 2022</h2>
     </div>
