--- a/dc/index.html
+++ b/dc/index.html
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="1; URL=https://discord.gg/xRmBAVVXDc">
+<meta http-equiv="refresh" content="1; URL=https://discord.gg/AQGuGnWVGB">
 <html lang="hu"><head>
 
     <title>Invite - Fusion Craft</title>
