--- a/kalendárium/index.html
+++ b/kalendárium/index.html
@@ -85,8 +85,19 @@ cursor: pointer;
 	 
 
 <!-- Trigger/Open The Modal -->
+	<button type="button" class="btn btn-danger" id="" >16</button>
+	<button type="button" class="btn btn-danger" id="" >17</button>
+	<button type="button" class="btn btn-danger" id="" >18</button>
+	<button type="button" class="btn btn-danger" id="" >19</button>
+<button type="button" class="btn btn-danger" id="" >20</button>
+	<button type="button" class="btn btn-success" id="napi" >21</button>
+	<button type="button" class="btn btn-dark" id="" >22</button>
+		<button type="button" class="btn btn-dark" id="" >23</button>
+		<button type="button" class="btn btn-dark" id="" >24</button>
 
-<button type="button" class="btn btn-success" id="napi" >Új év 2022 :D YEEEY XD</button>
+	
+
+
 
   <!-- Modal content -->
   <div id="myModal" class="modal">
@@ -98,8 +109,8 @@ cursor: pointer;
     </div>
     <div class="modal-body">
 	    <h3>!FIGYELEM!<h3>
-		    <h4>A kód csak EGYSZER beváltható. Addig lehet beváltani míg a szerver megnem nyílik.<h4>
-      <div class="popup" onclick="myFunction()">Kód: Fusion-2022ÚjÉviAjándékXD
+		    <h4>A kód csak EGYSZER beváltható. <h4>
+      <div class="popup" onclick="myFunction()">Kód: Fusion-21.-.23dsFTUEW
   <span class="popuptext" id="myPopup">Hi! Nem tudod, hogy kell beváltani? Nyiss ticketet!</span>
     </div>
     </div>
