--- a/kalendárium/index.html
+++ b/kalendárium/index.html
@@ -85,15 +85,15 @@ cursor: pointer;
 	 
 
 <!-- Trigger/Open The Modal -->
-	<button type="button" class="btn btn-danger" id="" >16</button>
-	<button type="button" class="btn btn-danger" id="" >17</button>
-	<button type="button" class="btn btn-danger" id="" >18</button>
-	<button type="button" class="btn btn-danger" id="" >19</button>
-<button type="button" class="btn btn-danger" id="" >20</button>
+	<button type="button" class="btn btn-danger" id="" disabkled="" >16</button>
+	<button type="button" class="btn btn-danger" id="" disabkled="">17</button>
+	<button type="button" class="btn btn-danger" id="" disabkled="">18</button>
+	<button type="button" class="btn btn-danger" id="" disabkled="">19</button>
+<button type="button" class="btn btn-danger" id="" disabkled="">20</button>
 	<button type="button" class="btn btn-success" id="napi" >21</button>
-	<button type="button" class="btn btn-dark" id="" >22</button>
-		<button type="button" class="btn btn-dark" id="" >23</button>
-		<button type="button" class="btn btn-dark" id="" >24</button>
+	<button type="button" class="btn btn-dark" id="" disabkled="">22</button>
+		<button type="button" class="btn btn-dark" id="" disabkled="">23</button>
+		<button type="button" class="btn btn-dark" id="" disabkled="">24</button>
 
 	
 
