--- a/kalendárium/index.html
+++ b/kalendárium/index.html
@@ -85,15 +85,16 @@ cursor: pointer;
 	 
 
 <!-- Trigger/Open The Modal -->
-	<button type="button" class="btn btn-danger" id="" disabkled="" >16</button>
-	<button type="button" class="btn btn-danger" id="" disabkled="">17</button>
-	<button type="button" class="btn btn-danger" id="" disabkled="">18</button>
-	<button type="button" class="btn btn-danger" id="" disabkled="">19</button>
-<button type="button" class="btn btn-danger" id="" disabkled="">20</button>
-	<button type="button" class="btn btn-success" id="napi" >21</button>
-	<button type="button" class="btn btn-dark" id="" disabkled="">22</button>
-		<button type="button" class="btn btn-dark" id="" disabkled="">23</button>
-		<button type="button" class="btn btn-dark" id="" disabkled="">24</button>
+	 <button type="button" class="btn btn-success" id="napi" >1</button>
+<!--	EZEK A PIROSAK EZEK VOLTAK
+	 <button type="button" class="btn btn-danger" id="" disabled="" >16</button>
+	<button type="button" class="btn btn-danger" id="" disabled="">17</button>
+	<button type="button" class="btn btn-danger" id="" disabled="">18</button>
+	<button type="button" class="btn btn-danger" id="" disabled="">19</button> -->
+<button type="button" class="btn btn-danger" id="" disabled="">2</button>
+	<button type="button" class="btn btn-dark" id="" disabled="">3</button>
+		<button type="button" class="btn btn-dark" id="" disabled="">4</button>
+		<button type="button" class="btn btn-dark" id="" disabled="">5</button>
 
 	
 
@@ -120,6 +121,9 @@ cursor: pointer;
 </style>
   <h3><a href="/" class="idk" target="_blank">Fusion Craft</a></h3>
 <style>
+a:close {
+color:red;
+}
 a:link {
   color: black;
   background-color: transparent;
