--- a/kalendárium/index.html
+++ b/kalendárium/index.html
@@ -91,7 +91,7 @@ cursor: pointer;
 	<button type="button" class="btn btn-danger" id="" disabled="">17</button>
 	<button type="button" class="btn btn-danger" id="" disabled="">18</button>
 	<button type="button" class="btn btn-danger" id="" disabled="">19</button> -->
-<button type="button" class="btn btn-danger" id="" disabled="">2</button>
+<button type="button" class="btn btn-dark" id="" disabled="">2</button>
 	<button type="button" class="btn btn-dark" id="" disabled="">3</button>
 		<button type="button" class="btn btn-dark" id="" disabled="">4</button>
 		<button type="button" class="btn btn-dark" id="" disabled="">5</button>
