--- a/kalendárium/index.html
+++ b/kalendárium/index.html
@@ -111,7 +111,7 @@ cursor: pointer;
     <div class="modal-body">
 	    <h3>!FIGYELEM!<h3>
 		    <h4>A kód csak EGYSZER beváltható. <h4>
-      <div class="popup" onclick="myFunction()">Kód: Fusion-21.-.23dsFTUEW
+      <div class="popup" onclick="myFunction()">Kód: fcChrismass2023
   <span class="popuptext" id="myPopup">Hi! Nem tudod, hogy kell beváltani? Nyiss ticketet!</span>
     </div>
     </div>
