--- a/kalendárium/index.html
+++ b/kalendárium/index.html
@@ -83,15 +83,14 @@ cursor: pointer;
 	 <h1>Fusion Craft</h1><h1>
 </h1><h2>Kalendár</h2>
 	 
-
-<!-- Trigger/Open The Modal -->
-	 <button type="button" class="btn btn-success" id="napi" >1</button>
 <!--	EZEK A PIROSAK EZEK VOLTAK
 	 <button type="button" class="btn btn-danger" id="" disabled="" >16</button>
 	<button type="button" class="btn btn-danger" id="" disabled="">17</button>
 	<button type="button" class="btn btn-danger" id="" disabled="">18</button>
 	<button type="button" class="btn btn-danger" id="" disabled="">19</button> -->
-<button type="button" class="btn btn-dark" id="" disabled="">2</button>
+<!-- Trigger/Open The Modal -->
+	 <button type="button" class="btn btn-danger" id="" disabled="">1</button>
+	 <button type="button" class="btn btn-success" id="napi" >2</button>
 	<button type="button" class="btn btn-dark" id="" disabled="">3</button>
 		<button type="button" class="btn btn-dark" id="" disabled="">4</button>
 		<button type="button" class="btn btn-dark" id="" disabled="">5</button>
