--- a/csapattagok/index.html
+++ b/csapattagok/index.html
@@ -245,16 +245,21 @@ visibility: visible;
      </div>
 </div>
 <div class="container">
-<h3>TutiCraft</h3>
-	<h4>Tulajdonos/Webfejlesztő/Szerver Fejlesztő/Discord Moderátor, Fejlesztő<h4>
+	<div class="Ádám">
+<h3>Ádám</h3>
+	<h4>Tulajdonos/Fejlesztő, Fejlesztő<h4>
 <img src="https://fusioncrafthu.github.io/kep/tuticraft.png" alt="tuti" class="img-circle" width="100" height="100">
-<h3>ASDLACKO</h3>
-		<h4>Moderátor/Építész<h4>
-<img src="https://cdn.discordapp.com/avatars/748979246935965696/8cfaba9ba1ad9334aece945abfaaad4f.png?size=1024" alt="LACKO" class="img-circle" width="100" height="100">
-	<h3>Ábel<h3>
+	</div>
+		<div class="LEO">
+<h3>Leo</h3>
+		<h4>Admin/Építész<h4>
+<img src="https://cdn.discordapp.com/avatars/666712256805077052/822145103f6d562cce837f679eb49358.png?size=1024" alt="Leo" class="img-circle" width="100" height="100">
+	</div>
+			<div class="Nekolover"> 
+<h3>Nekolover<h3>
 	<h4>Moderátor<h4>
-	<img src="https://cdn.discordapp.com/avatars/752929834153541705/789becbdd58196069697a05d1abc5547.png" alt="ábel" class="img-circle" width="100" height="100">
-
+	<img src="https://cdn.discordapp.com/avatars/856290468870750209/030e38c122716c70d91ba2719f9546c5.png?size=1024" alt="Eszter" class="img-circle" width="100" height="100">
+</div>
 
 	
 	</div>
