--- a/kalendárium/index.html
+++ b/kalendárium/index.html
@@ -90,10 +90,18 @@ cursor: pointer;
 	<button type="button" class="btn btn-danger" id="" disabled="">19</button> -->
 <!-- Trigger/Open The Modal -->
 	 <button type="button" class="btn btn-danger" id="" disabled="">1</button>
-	 <button type="button" class="btn btn-success" id="napi" >2</button>
-	<button type="button" class="btn btn-dark" id="" disabled="">3</button>
-		<button type="button" class="btn btn-dark" id="" disabled="">4</button>
-		<button type="button" class="btn btn-dark" id="" disabled="">5</button>
+	 <button type="button" class="btn btn-danger" id="" disabled="" >2</button>
+	  <button type="button" class="btn btn-danger" id="" disabled="">3</button>
+	 <button type="button" class="btn btn-danger" id="" disabled="" >4</button>
+	  <button type="button" class="btn btn-danger" id="" disabled="">5</button>
+	 <button type="button" class="btn btn-danger" id="" disabled="" >6</button>
+	  <button type="button" class="btn btn-danger" id="" disabled="">7</button>
+	 <button type="button" class="btn btn-danger" id="" disabled="" >8</button>
+	  <button type="button" class="btn btn-danger" id="" disabled="">9</button>
+	 <button type="button" class="btn btn-danger" id="" disabled="" >10</button>
+	<button type="button" class="btn btn-success" id="napi" ></button>11</button>
+		<button type="button" class="btn btn-dark" id="" disabled="">12</button>
+		<button type="button" class="btn btn-dark" id="" disabled="">13</button>
 
 	
 
