--- a/partner/index.html
+++ b/partner/index.html
@@ -1,12 +1,12 @@
-<h1>✯ **Fusion Craft** ✯</h1>h1>
+<h1>✯ **Fusion Craft** ✯</h1>
 <h1>*Magyarország egyik legegyedibb Minecraft szervere!*<h1>
-<h1></h1>
+<h1‎>‎ </h1>
 <h1>> :pushpin: Jó rangok/tagok/csapattagok/botok<h1>
 <h1>> :gear: Folyamatos Fejlesztések/Updateok<h1>
 <h1>> :boom: Egyedi Mappok/Pályák/Ötletek<h1>
 <h1>> :warning: Jól configolt Discord szerver<h1>
 <h1>> :gift: Gyakori eventek/nyereményjátékok<h1>
-<h1><h1>
+<h1>‎ <h1>
 <h1>:red_circle: **Ping:** @everyone <h1>
 <h1>:green_circle: **Discord Szerverünk:** https://discord.gg/AQGuGnWVGB<h1>
 <h1>:globe_with_meridians:** Weboldal/Store ** *https://fusioncrafthu.github.io/ * (Átépítés alatt 2023.11.25. dátummal)<h1>
