--- a/partner/index.html
+++ b/partner/index.html
@@ -1,3 +1,28 @@
+    <title>Partner szöveg - Fusion Craft</title>
+	<meta data-n-head="1" data-hid="og:type" name="og:type" content="website">
+	<meta data-n-head="1" data-hid="og:site_name" name="og:site_name" content="Fusion Craft">
+	    <meta charset="UTF-8">
+         <meta name="description" content="Fusion Craft hivatalos weboldal.
+					   
+                                        ">
+         <meta name="theme-color" content="#00f7ff">
+    <link rel="shortcut icon" href="/kep/fckep.png" type="image/x-icon">
+<meta property="og:image" content="https://fusioncrafthu.github.io/gifek/fc.gif">
+<meta property="og:url" content="https://fusioncrafthu.github.io/">						
+											   
+         <meta name="author" content="Almighty.Adam.">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <link rel="stylesheet" href="style.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+ <body id="Fusion Craft" data-spy="scroll" data-target=".navbar" data-offset="60">
+
+
 <h1>✯ **Fusion Craft** ✯</h1>
 <h1>*Magyarország egyik legegyedibb Minecraft szervere!*<h1>
 <h1‎>‎ </h1>
